DogAPI/Kubernetes/2-dogapiwithingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dog-api
  labels:
    app: dogapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dogapi
  template:
    metadata:
      labels:
        app: dogapi
    spec:
      containers:
        - name: dogapi
          image: thornpar/dogapi:version1
          ports:
            - containerPort: 80
    
---

apiVersion: v1
kind: Service
metadata:
  name: dog-api-service
  labels:
    app: dogapi
spec:
  selector:
    app: dogapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  #type: LoadBalancer
  type: ClusterIP
  
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dog-api
  labels:
    app: dogapi
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: demo.rpcode.se
      http:
        paths:
          - path: /
            backend:
              serviceName: dog-api-service
              servicePort: 80
